# gppanel

./: .gitignore  CMakeLists.txt  Changeslog.md  LICENSE  README.md
gpPanel/: CMakeLists.txt  MathplotMyModifications.txt  baseData.cpp  baseData.h  gpBarLayer.cpp  gpLayer.cpp  gpLayer.h  gpLineLayer.cpp  gpMenu.cpp  gpMenu.h  gpPanel.cpp  gpPanel.h  gpPopup.h  gpSeries.cpp  gpSizer.cpp  lineLayer.cpp  lineLayer.h  mathplot.cpp  readme.txt
gpPanel/baseLayers/: baseData.h  gpLayer.cpp  gpLayer.h
gpPanel/docs/: gpPanelUML.dia
gpPanel/math/: CMakeLists.txt  Fourier.cpp  Fourier.inline.h  gpFormula.cpp  gpFormula.h  gpMath.cpp  gpMath.h  symbols.h
gpPanel/menu/: CMakeLists.txt  gpMenu.cpp  gpMenu.h  gpMenuGroup.cpp  gpPopup.cpp  gpPopup.h  gpPopupGroup.cpp
include/: CMakeLists.txt  Fourier.h  Fourier.inline.h  baseData.h  gpBarLayer.h  gpLayer.h  gpLineLayer.h  gpMenu.h  gpMenuGroup.h  gpPanel.h  gpPopup.h  gpPopupGroup.h  gpSeries.h  gpSizer.h  lineLayer.h  mathplot.h
wxMathPlot/: mathplot.cpp  mathplot.h
